# vcpkg-pybind-cv-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.py  vcpkg.json
